# sled_htap

./: .gitignore  Cargo.toml
benchmarks/graduate-test/columnar_test/: Cargo.toml
benchmarks/graduate-test/htap_test/: BATCH_TESTING.md  Cargo.toml  README.md  merge_results.py  (+13 more)
benchmarks/graduate-test/mixed_workload/: Cargo.toml  benchmark_results.json  convert_results.py  dummy_results.json  generate_data.py  mixed_workload_results.csv  partial.json  plot_results.py  run_all.sh  test_plot.py
benchmarks/graduate-test/mixed_workload/src/: main.rs  schema.rs  workload.rs
benchmarks/sysbench-sim/: ABLATION_STUDY_README.md  BATCH_TEST_GUIDE.md  Cargo.toml  JUPYTER_SETUP.md  L2_CACHE_TEST_README.md  L2_TEST_DESIGN.md  L2_TEST_QUICKSTART.md  REPORT_GENERATOR_README.md  ablation_study.sh  batch_l2_report_20251117_174312.ipynb  batch_l2_test.sh  check_jupyter_env.sh  example_usage.sh  generate_batch_report.py  generate_l2_report.py  generate_wr_pct_data.sh  install_jupyter.sh  l2_throughput_chart.ipynb  l2_write_ratio_chart.ipynb  test_l2_cache.sh  test_mixed_workload.sh  test_write_ratio.sh
src/: cache_padded.rs  concurrency_control.rs  config.rs  db.rs  flusher.rs  ivec.rs  lib.rs  main.rs  meta.rs  new_columnar_draft.rs  node.rs  overlay_tree.rs  result.rs  schema.rs  serialization.rs  threadpool.rs  tree.rs  tree_column_scan_draft.rs
src/pagecache/: disk_pointer.rs  header.rs  heap.rs  iobuf.rs  iterator.rs  l2_merger.rs  logger.rs  metrics.rs  mod.rs  pagetable.rs  reservation.rs  segment.rs  snapshot.rs
tests/: test_ap_scan.rs  test_log.rs  test_tree.rs
(+94 files in other folders)
