[package]
name = "mixed_workload"
version = "0.1.0"
edition = "2021"

[dependencies]
sled = { path = "../../../" }
rand = "0.8"
clap = { version = "4.0", features = ["derive"] }
crossbeam = "0.8"
log = "0.4"
env_logger = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num_cpus = "1.0"
